# atcoder-readme-stats

./: LICENSE  Pipfile  README.md  api.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: test.yml
api/: router.py
src/: __init__.py  atcoder.py  atcoder_problems.py  const.py  icons.py  model.py  stats.py  utils.py
src/cards/: card.py  error.py  heatmap.py  stats.py
src/themes/: themes.py
test/: test_stats.py
tests/: atcoder.html  test_atcoder.py  test_error.py  test_heatmap.py  test_stats.py  utils.py
tests/html/: competition_history.html  profile.html
tests/json/: competition_history.json
