[tool.poetry]
name = "atcoder-readme-stats"
version = "0.1.0"
description = ""
authors = ["iwbc-mzk <46069337+iwbc-mzk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "atcoder_readme_stats"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.1"
pytest = "^7.4.0"
cssutils = "^2.7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--tb=short",
    "-vl",
    "-rsxX",
    "--cov=src",
    # "--cov-report=html"
]
testpaths = "tests"