
[project]
name = "atcoder-readme-stats"
version = "0.1.0"
description = ""
authors = [{name = "iwbc-mzk", email = "46069337+iwbc-mzk@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{ include = "atcoder_readme_stats" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.1"
pytest = "^7.4.0"
cssutils = "^2.7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--tb=short",
    "-vl",
    "-rsxX",
    # "--cov=src",
    # "--cov-report=html"
]
testpaths = "tests"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
